# AppNeuroneBiologique

./: .gitignore  AGENTS.md  README.md
qtgui/: CMakeLists.txt  ComponentPalette.cpp  ComponentPalette.hpp  Dataset.cpp  Dataset.hpp  GraphScene.cpp  GraphScene.hpp  MainWindow.cpp  MainWindow.hpp  NeuroneBiologique.hpp  NeuroneNode.cpp  NeuroneNode.hpp  PropertyPanel.cpp  PropertyPanel.hpp  ReseauNeural.cpp  ReseauNeural.hpp  SynapseEdge.cpp  SynapseEdge.hpp  main.cpp
qtgui/exemples/: generate_74ls181.py
qtgui/exemples/datasets/: 74ls181.csv  74ls181_1024.csv  nand.csv  nor.csv  or.csv  xnor.csv  xor.csv
qtgui/exemples/reseaux/: 74ls181.csv  74ls181_test.csv  74ls181_test_2.csv  and.csv  essai_and.csv  essai_reboucle.csv  essai_xor.csv  essai_xor_2.csv  essai_xor_3.csv  essai_xor_4.csv  essai_xor_5.csv  nand.csv  nor.csv  or.csv  xnor.csv  xor.csv
